# messy-grapefruit

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src/: action.rs  action_handler.rs  app.tsx  clipboard.rs  index.tsx  io.rs  main.rs  math.rs  theme.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: icons.tsx
src/engine/: animation.rs  canvas.ts  constraints.rs  eraser.rs  grid.ts  hatch.rs  hit-test.ts  hit_test.rs  ik.rs  merge.rs  merge.ts  mod.rs  palette.rs  physics.rs  snap.rs  snap.ts  socket.rs  symmetry.rs  transform.rs
src/export/: bone_export.rs  mod.rs  rasterize.rs  ron_meta.rs  spritesheet.rs  svg_gen.rs  watcher.rs
src/lib/: constants.ts  history.ts  math.ts  tauri.ts  types.ts
src/model/: animation.rs  mod.rs  project.rs  sprite.rs  vec2.rs
src/pages/: EditorPage.tsx  ProjectPage.tsx
src/state/: editor.rs  history.rs  mod.rs  project.rs
src/stores/: editor.ts  palette.ts  project.ts
src/styles/: global.css  theme.css
src/ui/: canvas.rs  canvas_eraser.rs  canvas_eyedropper.rs  canvas_fill.rs  canvas_input.rs  canvas_refimage.rs  canvas_render.rs  canvas_render_overlays.rs  canvas_render_strokes.rs  canvas_select.rs  canvas_transform.rs  export_dialog.rs  gradient_bar.rs  grid.rs  icons.rs  mod.rs  new_sprite_dialog.rs  project_overview.rs  sidebar.rs  sidebar_fill.rs  sidebar_gradient.rs  sidebar_hatch.rs  sidebar_layers.rs  sidebar_tools.rs  (+5 more)
(+25 files in other folders)
