[package]
name = "messy-grapefruit"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
rfd = "0.15"
resvg = "0.45"
ron = "0.9"
notify = "8"
image = "0.25"
arboard = "3"
dirs = "6"
